
add_subdirectory(glfwnative)
add_subdirectory(core)
add_subdirectory(math)
add_subdirectory(objects)
add_subdirectory(spatial)
add_subdirectory(io)
add_subdirectory(audio)
add_subdirectory(glcl)
add_subdirectory(model)
add_subdirectory(algorithms)
add_subdirectory(scripting)
add_subdirectory(ui)

if(LISEM_BUILD_APP)
add_subdirectory(app)
endif(LISEM_BUILD_APP)

if(LISEM_BUILD_PYTHON)
add_subdirectory(python)
endif(LISEM_BUILD_PYTHON)

if(LISEM_BUILD_TESTS)
add_subdirectory(test)
endif(LISEM_BUILD_TESTS)
